--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "generate:icons": "node generate-icons-index.mjs",
     "start": "node server.js",
-    "install": "npm install --legacy-peer-deps",
-    "postinstall": "npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
