--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/api/(.*)", "dest": "/server.js" }]
+  "builds": [{ "src": "vite.config.js", "use": "@vercel/static-build" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
