--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@heroui/react": "^2.8.5",
     "@tailwindcss/vite": "^4.1.15",
+    "@vercel/analytics": "^1.5.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "devicon": "^2.17.0",
