--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0",
     "react-scroll": "^1.9.3",
     "react-tech-icons": "^1.6.2",
     "resend": "^6.2.2",
