--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "vite": "^5.4.11"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.57.1"
   }
 }
