--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vite": "^5.4.11"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.57.1"
+    "@rollup/rollup-linux-x64-gnu": "^4.57.1",
+    "lightningcss-linux-x64-gnu": "^1.31.1"
   }
 }
