Fix Vercel build: Add swc-core-linux-x64-gnu optional dependency

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.57.1",
+    "@swc/core-linux-x64-gnu": "^1.15.11",
     "@tailwindcss/oxide-linux-x64-gnu": "^4.1.18",
     "lightningcss-linux-x64-gnu": "^1.31.1"
   }
